fix: modified header grid on one row with wrap and correct gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,18 +133,14 @@ header article {
     margin-bottom: 80px;
 }
 
-header article .cta-grid .first-row,
-header article .cta-grid .second-row {
+header article .cta-grid {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
-header article .cta-grid .second-row {
-    margin-top: 20px;
-}
-
 .cta-grid .cta-box {
-    flex-basis: calc(100% / 3);
+    flex-basis: calc((100% / 3) - 20px + (20px / 3));
     aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
@@ -161,7 +157,7 @@ header article .cta-grid .cta-box h3 {
 }
 
 header article .cta-grid .cta-box#first-cta-box {
-    flex-basis: calc(((100% / 3) * 2) + 20px);
+    flex-basis: calc((100% / 3) * 2 - 20px + (20px / 3 * 2));
     aspect-ratio: 2/1;
     flex-direction: row;
     justify-content: left;
@@ -237,7 +233,7 @@ main #planning div:nth-child(2) {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 15px;
+    padding: 30px;
     background-color: white;
     border-radius: 30px;
     text-align: center;
@@ -505,7 +501,7 @@ footer a {
         width: 60%;
     }
 
-    header article .cta-grid .first-row .cta-box:nth-child(2) {
+    header article .cta-grid .cta-box:nth-child(2) {
         justify-content: flex-start;
     }
 
@@ -541,7 +537,7 @@ footer a {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 638px) {
 
     .content {
         padding-inline: 10%;
@@ -552,10 +548,8 @@ footer a {
         color: white;
     }
 
-    header article .cta-grid .first-row,
-    header article .cta-grid .second-row {
+    .cta-grid {
         flex-direction: column;
-        gap: 20px;
     }
 
     .cta-grid .cta-box {
@@ -571,7 +565,7 @@ footer a {
         margin: auto;
     }
 
-    header article .cta-grid .first-row .cta-box:nth-child(2) {
+    header article .cta-grid .cta-box:nth-child(2) {
         justify-content: center;
     }
 
